fix: prevent overflow-wrap for code in Safari

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -258,10 +258,6 @@ body {
 
   pre {
     margin-bottom: 18px;
-    // fix inline comment indicator not showing in overflowed container
-    overflow: visible;
-    // 2018-06-28 stop line from wrapping
-    overflow-x: auto;
     line-height: 1.5;
     font-size: 15px;
 
